log
Sat 09 Sep 2023 01:12:51 AM UTC: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
60cf545
Sat 09 Sep 2023 01:14:27 AM UTC: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  1|5
total_score: 10/70
3bd5ba3
Sat 09 Sep 2023 01:14:47 AM UTC: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:54:10: error: redefinition of ‘index’
   54 |     long index = hash(key, map->capacity);
      |          ^~~~~
hashmap.c:43:6: note: previous definition of ‘index’ was here
   43 | long index = hash(key, map->capacity);
      |      ^~~~~
Compilation failed
123be8d
Sat 09 Sep 2023 01:17:33 AM UTC: 
 hashmap.c | 12 ------------
 1 file changed, 12 deletions(-)
 tests:  1|5
total_score: 10/70
1429951
Sat 09 Sep 2023 01:18:02 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
4b1ddf2
Sat 09 Sep 2023 01:24:04 AM UTC: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:90:33: error: expected ‘;’ before ‘return’
   90 |             map->current = index
      |                                 ^
      |                                 ;
   91 |             return map->buckets[index];
      |             ~~~~~~               
Compilation failed
2390684
Sat 09 Sep 2023 01:33:07 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
0a259df
Sat 09 Sep 2023 01:33:28 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
724efd3
Sat 09 Sep 2023 01:38:25 AM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  11|2
total_score: 50/70
65a9ef3
Sat 09 Sep 2023 01:45:15 AM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
4d3c127
Sat 09 Sep 2023 01:46:30 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:112:20: error: expected ‘;’ before ‘return’
  112 |   map->current = -1
      |                    ^
      |                    ;
  113 |     return NULL;
      |     ~~~~~~          
hashmap.c:114:1: error: control reaches end of non-void function [-Werror=return-type]
  114 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8d08e68
Sat 09 Sep 2023 01:46:51 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
eb1f306
Sat 09 Sep 2023 01:50:03 AM UTC: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  16|1
total_score: 60/70
8321330
Sat 09 Sep 2023 01:54:27 AM UTC: 
 hashmap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:69:43: error: expected expression before ‘)’ token
   69 |     for (long i = 0; i < map->capacity; i+) {
      |                                           ^
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d6131a7
Sat 09 Sep 2023 01:54:50 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:71:5: error: expected ‘;’ before ‘}’ token
   71 |     }
      |     ^
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
38a60c9
Sat 09 Sep 2023 01:55:14 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘enlarge’:
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b108610
Sat 09 Sep 2023 01:55:48 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|0
total_score: 70/70
d041571
